5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_2443.log
== SUBMITION (2019-04-15 18:23:28) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura:"))
n=int(input("leia a opcao desejada/n1 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)

-- EXECUTION TIME:
0.275105
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:24:36) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)

-- EXECUTION TIME:
0.207735
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:25:57) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura:"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)

-- EXECUTION TIME:
0.174984
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:26:02) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)

-- EXECUTION TIME:
0.132392
-- ERROR:
  File "/home/codebench/codes/1643/2443/main.py", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:26:05) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)

-- ERROR:
File "XXXX", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:26:14) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4)
-- ERROR:
File "XXXX", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:26:29) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4))
-- EXECUTION TIME:
0.117257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 1, in <module>
    from match import *
ImportError: No module named 'match'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:26:36) 
-- CODE:
from match import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from match import *
ModuleNotFoundError: No module named 'match'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:27:16) 
-- CODE:
from math import *
a=float(input("leia o raio:"))
h=float(input("leia a altura"))
n=int(input("leia a opcao desejada/n1 - volume de ar/t2 - volume do combustivel:"))
vr=(4*pi*a*a*a)/3
v=((pi*h*h))*((3*a-h))/3
vcom= vr-v
if(n==1):
	print(round(v,4))
else:
	print(round(vcom,4))
-- EXECUTION TIME:
0.193278
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
